--- a/package.json
+++ b/package.json
@@ -1,41 +1,22 @@
 {
   "name": "react-native-sound",
-  "version": "0.11.0",
+  "version": "0.10.11",
   "description": "React Native module for playing sound clips on iOS, Android, and Windows",
   "main": "sound.js",
   "typings": "index.d.ts",
-  "repository": "zmxv/react-native-sound",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zmxv/react-native-sound.git"
+  },
   "keywords": [
     "react-native",
+    "react-component",
     "sound",
-    "audio",
-    "ios",
-    "android",
-    "windows"
+    "audio"
   ],
   "author": "Zhen Wang <z@zmxv.com> (http://blog.zmxv.com)",
   "license": "MIT",
   "peerDependencies": {
     "react-native": ">=0.8.0"
-  },
-  "scripts": {
-    "clang-format": "node scripts/clang-format.js",
-    "clang-format:check": "node scripts/clang-format.js --check"
-  },
-  "devDependencies": {
-    "glob": "^7.1.4",
-    "promisify-child-process": "^3.1.1"
-  },
-  "files": [
-    "**/*.@(js|ts)",
-    "*.podspec",
-    "android/build.gradle",
-    "android/src/**/*.@(java|xml)",
-    "RNSound.xcodeproj/project.pbxproj",
-    "RNSound.xcodeproj/project.xcworkspace/contents.xcworkspacedata",
-    "RNSound/**/*.@(h|m)",
-    "windows/RNSoundModule/**/*.@(sln|json|xml|csproj)",
-    "windows/RNSoundModule/**/*.cs",
-    "!scripts"
-  ]
+  }
 }
